test_regress/t/t_var_const_bad.out
%Error: t/t_var_const_bad.v:17:7: Assigning to const variable: 'five'
                                : ... note: In instance 't'
   17 |       five = 3'd4;
      |       ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
